Fix alignement of span elements inside entityPrint

--- a/src/style/viewport.styl
+++ b/src/style/viewport.styl
@@ -7,7 +7,7 @@
   display flex
   flex-grow 2
   height 32px
-  font-size 14px
+  font-size 15px
   justify-content space-between
   left 0
   margin 0 auto
